Fixed alignment in the footer and changed the overall text color

--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -1,5 +1,6 @@
 .footer {
-    font-weight: bold;
+    margin-top: 80px;
+    font-weight: 600;
     color: bisque;
     padding: 100px 100px 20px;
     background-color: rgb(19, 77, 77);
@@ -7,13 +8,13 @@
         display: flex;
         justify-content: space-around;
         text-align: center;
-        padding-bottom: 24px;
+        padding-bottom: 56px;
         div {
             display: flex;
             flex-direction: column;
             align-items: center;
             h2 {
-                padding: 24px 0 8px;
+                padding: 24px 0 16px;
                 font-size: 40px;
                 line-height: 24px;
                 letter-spacing: 2px;
@@ -21,6 +22,10 @@
             img {
                 width: 56px;
                 height: 56px;
+                filter: invert(1) sepia(1) saturate(20) hue-rotate(90deg);
+            }
+            p {
+                color: #2cbfc4;
             }
         }
         
@@ -35,6 +40,9 @@
             width: 40px;
             height: 40px;
         }
+        img:hover {
+            transform: scale(1.5);
+        }
 
         .footer-payment-methods {
             display: flex;
@@ -47,8 +55,14 @@
     .footer-corp {
         display: flex;
         justify-content: center;
+        margin-top: 40px;
         div:not(:last-child) {
             margin-right: 24px;
+        }
+        div a:hover {
+            color: #2cbfc4;
+            text-shadow: #1e9bee 6px 0 16px;
+            transform: scale(1.5);
         }
     
     }
